--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "gamepad-server"
 version = "0.1.0"
 edition = "2024"
+readme = "README.md"
+license_file = "LICENSE"
+repository = "https://github.com/ArkStructCodes/gamepad-server"
 
 [profile.release]
 lto = true
